--- a/Effectus/Effectus/MainWindow.xaml
+++ b/Effectus/Effectus/MainWindow.xaml
@@ -52,12 +52,12 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <WrapPanel Background="#ede8ef">
+                <StackPanel Orientation="Horizontal" Background="#ede8ef">
                     <iconPacks:PackIconBootstrapIcons Kind="Tools" Foreground="#777" VerticalAlignment="Center" Margin="12,0,0,0" Width="14" Height="14" />
                     <Label Foreground="#777" FontWeight="Bold">
                         <TextBlock Padding="0,2" FontSize="13">PROPERTIES</TextBlock>
                     </Label>
-                </WrapPanel>
+                </StackPanel>
             </Grid>
             <Grid Grid.Row="2" Grid.RowSpan="2">
                 <Grid.RowDefinitions>
