--- a/Effectus/Effectus/Controls/SimpleSubWindow.xaml
+++ b/Effectus/Effectus/Controls/SimpleSubWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Grid x:Class="Effectus.SimpleSubWindow"
+﻿<UserControl x:Class="Effectus.SimpleSubWindow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,26 +6,25 @@
       xmlns:local="clr-namespace:Effectus"
       xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
       mc:Ignorable="d">
-    <Border Margin="4" BorderThickness="2" BorderBrush="{Binding WindowColor}">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <StackPanel Orientation="Horizontal" Background="{Binding WindowColor}">
-                <iconPacks:PackIconBootstrapIcons Kind="{Binding Icon}" Foreground="#777" VerticalAlignment="Center" Margin="9,0,0,0" Width="12" Height="12" />
-                <Label Foreground="#777">
-                    <TextBlock FontSize="12" Text="{Binding Title}"></TextBlock>
-                </Label>
-            </StackPanel>
-            <Grid Grid.Row="1" x:Name="subContainer">
-                <ContentPresenter />
-            </Grid>
-            <Viewbox Grid.Row="1" Stretch="Uniform" StretchDirection="Both">
-                <Canvas Background="#eeffff" Width="1280" Height="720" ClipToBounds="True">
-                    <Rectangle Fill="#b0a4c1" Canvas.Left="-50" Canvas.Top="100" Width="100" Height="100"></Rectangle>
-                </Canvas>
-            </Viewbox>
-        </Grid>
-    </Border>
-</Grid>
+    <UserControl.Template>
+        <ControlTemplate TargetType="{x:Type local:SimpleSubWindow}">
+            <Border Margin="4" BorderThickness="2"  BorderBrush="{TemplateBinding WindowColor}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <StackPanel Orientation="Horizontal" Background="{TemplateBinding WindowColor}">
+                        <iconPacks:PackIconBootstrapIcons Kind="{TemplateBinding Icon}" Foreground="#777" VerticalAlignment="Center" Margin="9,0,0,0" Width="12" Height="12" />
+                        <Label Foreground="#777">
+                            <TextBlock FontSize="12" Text="{TemplateBinding Title}"></TextBlock>
+                        </Label>
+                    </StackPanel>
+                    <Grid Grid.Row="1" x:Name="subContainer">
+                        <ContentPresenter Content="{TemplateBinding Content}"/>
+                    </Grid>
+                </Grid>
+            </Border>
+        </ControlTemplate>
+    </UserControl.Template>
+</UserControl>
