--- a/EffectusReunion/EffectusReunion/EffectusReunion/Controls/SimpleSubWindow.Generic.xaml
+++ b/EffectusReunion/EffectusReunion/EffectusReunion/Controls/SimpleSubWindow.Generic.xaml
@@ -2,11 +2,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-    xmlns:local="clr-namespace:Effectus">
-    <Style TargetType="{x:Type local:SimpleSubWindow}">
+    xmlns:local="using:EffectusReunion">
+    <Style TargetType="local:SimpleSubWindow">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:SimpleSubWindow}">
+                <ControlTemplate TargetType="local:SimpleSubWindow">
                     <Border Margin="4" BorderThickness="2"  BorderBrush="{TemplateBinding WindowColor}">
                         <Grid>
                             <Grid.RowDefinitions>
@@ -14,10 +14,8 @@
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
                             <StackPanel Orientation="Horizontal" Background="{TemplateBinding WindowColor}">
-                                <iconPacks:PackIconBootstrapIcons Kind="{TemplateBinding Icon}" Foreground="#777" VerticalAlignment="Center" Margin="9,0,0,0" Width="12" Height="12" />
-                                <Label Foreground="#777">
-                                    <TextBlock FontSize="12" Text="{TemplateBinding Title}"></TextBlock>
-                                </Label>
+                                <SymbolIcon Symbol="{TemplateBinding Icon}" Foreground="#777" VerticalAlignment="Center" Margin="9,0,0,0" Width="12" Height="12" />
+                                <TextBlock Foreground="#777" FontSize="12" Padding="4" Text="{TemplateBinding Title}" />
                             </StackPanel>
                             <Grid Grid.Row="1" x:Name="subContainer">
                                 <ContentPresenter Content="{TemplateBinding Content}"/>
