--- a/EffectusReunion/EffectusReunion/MainPage.xaml
+++ b/EffectusReunion/EffectusReunion/MainPage.xaml
@@ -1,11 +1,12 @@
-﻿<Window
-    x:Class="EffectusReunion.MainWindow"
+﻿<Page
+    x:Class="EffectusReunion.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:EffectusReunion"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -71,4 +72,4 @@
             </Grid>
         </local:SimpleSubWindow>
     </Grid>
-</Window>
+</Page>
