--- a/EffectusReunion/EffectusReunion/MainPage.xaml
+++ b/EffectusReunion/EffectusReunion/MainPage.xaml
@@ -27,6 +27,8 @@
                         <RectangleGeometry Rect="0 0 1280 720"></RectangleGeometry>
                     </Canvas.Clip>
                     <Rectangle Fill="#b0a4c1" Canvas.Left="-50" Canvas.Top="100" Width="100" Height="100"></Rectangle>
+                    <MediaPlayerElement x:Name="video1" Canvas.Left="640" Canvas.Top="0" Width="640" Height="360" AutoPlay="False" AreTransportControlsEnabled="False" />
+                    <MediaPlayerElement x:Name="video2" Canvas.Left="0" Canvas.Top="360" Width="640" Height="360" AutoPlay="False" AreTransportControlsEnabled="False" />
                 </Canvas>
             </Viewbox>
         </local:SimpleSubWindow>
@@ -52,6 +54,7 @@
                             <Button Click="Step_Click" Margin="2" Name="stepButton" RelativePanel.RightOf="pauseButton">
                                 Step
                             </Button>
+                            <TextBlock Margin="2" RelativePanel.Below="playButton" Name="timeLabels"></TextBlock>
                         </RelativePanel>
                     </StackPanel>
                 </ScrollViewer>
