--- a/EffectusReunion/EffectusReunion/MainPage.xaml
+++ b/EffectusReunion/EffectusReunion/MainPage.xaml
@@ -1,11 +1,12 @@
-﻿<Window
-    x:Class="EffectusReunion.MainWindow"
+﻿<Page
+    x:Class="EffectusReunion.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:EffectusReunion"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -21,11 +22,10 @@
         </Grid.ColumnDefinitions>
         <local:SimpleSubWindow Title="Scene" Icon="PreviewLink">
             <Viewbox Grid.Row="1" Stretch="Uniform" StretchDirection="Both">
-                <Canvas Background="#eeffff" Width="1280" Height="720">
+                <Canvas Width="1280" Height="720">
                     <Canvas.Clip>
                         <RectangleGeometry Rect="0 0 1280 720"></RectangleGeometry>
                     </Canvas.Clip>
-                    <Rectangle Fill="#b0a4c1" Canvas.Left="-50" Canvas.Top="100" Width="100" Height="100"></Rectangle>
                 </Canvas>
             </Viewbox>
         </local:SimpleSubWindow>
@@ -51,6 +51,12 @@
                             <Button Click="Step_Click" Margin="2" Name="stepButton" RelativePanel.RightOf="pauseButton">
                                 Step
                             </Button>
+                            <Button Click="Render_Click" Margin="2" Name="renderButton" RelativePanel.RightOf="stepButton">
+                                Test Render
+                            </Button>
+                            <TextBlock Margin="2" RelativePanel.Below="playButton" Name="timeLabels"></TextBlock>
+                            <ProgressBar Margin="2" Width="200" RelativePanel.Below="timeLabels" Name="progress" IsIndeterminate="False">
+                            </ProgressBar>
                         </RelativePanel>
                     </StackPanel>
                 </ScrollViewer>
@@ -71,4 +77,4 @@
             </Grid>
         </local:SimpleSubWindow>
     </Grid>
-</Window>
+</Page>
